force-app/main/default/objects/Answer__c/fields/Answer_Avatar__c.field-meta.xml
<CustomField>
    <fullName>Answer_Avatar__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Answer Avatar</label>
    <length>100</length>
    <type>Text</type>
</CustomField>