force-app/main/default/objects/Answer__c/fields/Image_Title__c.field-meta.xml
<CustomField>
    <fullName>Image_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Image Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>