force-app/main/default/objects/Answer__c/fields/Next_Question__c.field-meta.xml
<CustomField>
    <fullName>Next_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers1</relationshipName>
    <type>Lookup</type>
</CustomField>