force-app/main/default/objects/Answer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>External_ID__c</columns>
    <columns>Answer__c</columns>
    <columns>Answer_Avatar__c</columns>
    <columns>Next_Question__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>